--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -54,8 +54,10 @@
   
   .product-card img {
     width: 100%;
-    height: auto;
-    border-radius: 10px;
+    height: 200px; /* <-- Altura de imagen fija */
+    object-fit: contain; /* <-- Contener la imagen sin deformarla */
+    background-color: #f9f9f9;
+    padding: 10px;
   }
   
   .product-card .tag {
@@ -86,5 +88,20 @@
   
   .pagination button:hover {
     background-color: #0056b3;
+  }
+  
+  .carousel {
+    width: 100%;
+    height: 250px;
+    margin: 20px 0;
+    overflow: hidden;
+    border-radius: 12px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  }
+  
+  .carousel img {
+    width: 100%;
+    height: 130%;
+    object-fit: cover;
   }
   
